...
    android:background="@drawable/background_image"
    android:paddingLeft="13dp"
    android:paddingRight="13dp"
    android:paddingTop="40dp">

    <EditText
        android:id="@+id/text_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:hint="Email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/text_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:hint="Password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/button_color"
        android:text="Login"
        android:textColor="@android:color/white" />

...
